refactor(extended-2.1; basic-3.1; basic-3.2; basic-3.3; basic-3.4): use BEM notation to form class names; follow single style for selectors naming; apply meaningful naming of identifiers and classes; apply names of identifiers and classes concise; remove use of tag selectors

--- a/index.html
+++ b/index.html
@@ -5,53 +5,53 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <header class="aaa">
-      <h1>Todo App</h1>
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="todo">
+    <header class="todo__header">
+      <h1 class="todo__title">Todo App</h1>
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix" class="todo__img">
+      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower" class="todo__link">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <h3 for="new-task">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <main class="todo__main">
+      <section id="todo__add" class="todo__add">
+        <h3 for="new-task" class="todo__add-title">Add Item</h3>
+        <div class="todo__add-wrap">
+          <input id="new-task" type="text" class="todo__input todo__input_text">
+          <button class="todo__btn todo__btn_add">Add</button>
         </div>
       </section>
-      <section>
-        <h2>Todo</h2>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove Button">
+      <section class="todo__incompleted">
+        <h2 class="todo__incompleted-title">Todo</h2>
+        <ul id="todo__incompleted" class="todo__list">
+          <li class="todo__item">
+            <input type="checkbox" class="todo__input todo__input_checkbox">
+            <label class="todo__label">Pay Bills</label>
+            <input type="text" class="todo__input todo__input_text todo__input_hidden">
+            <button class="todo__btn todo__btn_edit">Edit</button>
+            <button class="todo__btn todo__btn_delete">
+              <img src="./remove.svg" alt="Remove Button" class="todo__delete-icon">
             </button>
           </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove Button">
+          <li class="todo__item todo__item_edit">
+            <input type="checkbox" class="todo__input todo__input_checkbox">
+            <label class="todo__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo__input todo__input_text todo__input_hidden">
+            <button class="todo__btn todo__btn_edit">Save</button>
+            <button class="todo__btn todo__btn_delete">
+              <img src="./remove.svg" alt="Remove Button" class="todo__delete-icon">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Completed</h2>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg" alt="Remove Button">
+      <section class="todo__completed">
+        <h2 class="todo__completed-title">Completed</h2>
+        <ul id="todo__completed" class="todo__list">
+          <li class="todo__item">
+            <input type="checkbox" checked class="todo__input todo__input_checkbox">
+            <label class="todo__label">See the Doctor</label>
+            <input type="text" class="todo__input todo__input_text todo__input_hidden">
+            <button class="todo__btn todo__btn_edit">Edit</button>
+            <button class="todo__btn todo__btn_delete">
+              <img src="./remove.svg" alt="Remove Button" class="todo__delete-icon">
             </button>
           </li>
         </ul>
